plugins {
  id 'java'
  id 'org.springframework.boot' version '3.3.3'
  id 'io.spring.dependency-management' version '1.1.6'
  id 'org.flywaydb.flyway' version '10.10.0'
  id 'jacoco'
}

group = 'com.parkflow'
version = '0.1.0'

description = 'Backend API for Parkflow (Spring Boot 3, Java 21)'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
  implementation 'io.micrometer:micrometer-registry-prometheus'
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
  implementation 'org.flywaydb:flyway-core'
  implementation 'org.flywaydb:flyway-database-postgresql'
  runtimeOnly 'org.postgresql:postgresql'
  runtimeOnly 'com.h2database:h2'

  implementation 'org.mapstruct:mapstruct:1.5.5.Final'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

  // SECURITY: Rate limiting to prevent brute force and DoS
  implementation 'com.bucket4j:bucket4j_jdk17-core:8.17.0'
  implementation 'com.bucket4j:bucket4j_jdk17-jcache:8.17.0'
  implementation 'javax.cache:cache-api:1.1.1'

  compileOnly 'org.projectlombok:lombok:1.18.34'
  annotationProcessor 'org.projectlombok:lombok:1.18.34'
  testCompileOnly 'org.projectlombok:lombok:1.18.34'
  testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.boot:spring-boot-testcontainers'
  testImplementation 'org.testcontainers:junit-jupiter'
  testImplementation 'org.testcontainers:postgresql'
  testImplementation 'org.springframework.security:spring-security-test'
}

tasks.test {
  useJUnitPlatform()
}

jacocoTestReport {
  dependsOn test
  reports {
    xml.required = true
    html.required = true
  }
}

flyway {
  url = 'jdbc:postgresql://localhost:6021/parkflow_dev'
  user = 'parkflow'
  password = 'parkflow'
  driver = 'org.postgresql.Driver'
}

